# OCR-non-bdrc

./: .gitignore  README.md  pyproject.toml
data/: repo_made.txt  title_to_repo.txt
src/OCR_non_bdrc/: OCR_and_create_text.py  OCR_books.py  create_text.py  create_text_from_OCR.py  get_text.py
tests/: test_create_text_from_OCR.py
tests/data/: expected_text.txt
