[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_non_bdrc"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "A small package to help OCR non-bdrc"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "antx==0.1.11",
  "boto3==1.26.138",
  "botocore==1.29.138",
  "botok==0.8.12",
  "bs4==0.0.1",
  "cachetools==5.3.0",
  "certifi==2023.5.7",
  "cffi==1.15.1",
  "charset-normalizer==3.1.0",
  "click==8.1.3",
  "cryptography==40.0.2",
  "Deprecated==1.2.13",
  "diff-match-patch==20181111",
  "fonttools==4.39.4",
  "gitdb==4.0.10",
  "GitPython==3.1.31",
  "google-api-core==2.11.0",
  "google-auth==2.18.0",
  "google-cloud==0.34.0",
  "google-cloud-vision==2.8.0",
  "googleapis-common-protos==1.59.0",
  "grpcio==1.54.2",
  "grpcio-status==1.48.2",
  "idna==3.4",
  "isodate==0.6.1",
  "jmespath==1.0.1",
  "lxml==4.9.2",
  "openpecha==0.11.10",
  "pdf2image==1.16.3",
  "Pillow==8.4.0",
  "polib==1.1.1",
  "proto-plus==1.22.2",
  "protobuf==3.20.3",
  "pyasn1==0.5.0",
  "pyasn1-modules==0.3.0",
  "pycparser==2.21",
  "pydantic==1.10.7",
  "pyewts==0.2.0",
  "PyGithub==1.58.2",
  "PyJWT==2.7.0",
  "PyNaCl==1.5.0",
  "pyparsing==3.0.9",
  "python-dateutil==2.8.2",
  "python-docx==0.8.11",
  "PyYAML==5.4.1",
  "rdflib==5.0.0",
  "regex==2023.5.5",
  "requests==2.30.0",
  "rsa==4.9",
  "s3transfer==0.6.1",
  "six==1.16.0",
  "smmap==5.0.0",
  "soupsieve==2.4.1",
  "tqdm==4.65.0",
  "typing_extensions==4.6.0",
  "unicodedata2==15.0.0",
  "urllib3==1.26.15",
  "wrapt==1.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
